Makefile에 build2, build3, test2, test3 명령어 추가 src/Makefile에 driver2, driver3, rbtree2.o, rbtree3.o 추가 test/Makefile에 test2, test3, test-rbtree2, test-rbtree3 추가

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,8 +1,26 @@
-.PHONY: clean
+.PHONY: clean all
 
 CFLAGS=-Wall -g
 
+all: driver driver2 driver3
+
 driver: driver.o rbtree.o
+	gcc $(CFLAGS) -o driver driver.o rbtree.o
+
+driver2: driver.o rbtree2.o
+	gcc $(CFLAGS) -o driver2 driver.o rbtree2.o
+
+driver3: driver.o rbtree3.o
+	gcc $(CFLAGS) -o driver3 driver.o rbtree3.o
+
+rbtree.o: rbtree.c
+	gcc $(CFLAGS) -c rbtree.c
+
+rbtree2.o: rbtree2.c
+	gcc $(CFLAGS) -c rbtree2.c
+
+rbtree3.o: rbtree3.c
+	gcc $(CFLAGS) -c rbtree3.c
 
 clean:
-	rm -f driver *.o
+	rm -f driver driver2 driver3 *.o
